--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -503,8 +503,8 @@
 	<item>com.google.android.googlequicksearchbox/com.google.android.hotword.service.HotwordService</item>
     </string-array>
 
-    <!-- Shows the required view for in-display fingerprint -->
-    <bool name="config_supportsInDisplayFingerprint">true</bool>
+    <!-- Show a custom view for FOD -->
+    <bool name="config_needCustomFODView">true</bool>
 
     <!-- Default value for proximity check on screen wake
          NOTE! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)-->
